# cli

./: .gitignore  CONTRIBUTING.md  NOTICE.md  README.md  RELEASE-NOTES-v0.6.md  hjs.js  jep.js  package.json  pyproject.toml
examples/: basic_usage.sh
jep_cli/: __init__.py  client.py  main.py
reports/: jep-cli-v06-test-report.json
tests/: test_cli.py
