[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jep-cli"
version = "0.6.0"
description = "Command-line tool for creating and verifying JEP v0.6 events through the JEP API"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "HJS Spec", email = "signal@humanjudgment.org" }
]
requires-python = ">=3.9"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
jep = "jep_cli.main:main"

[project.urls]
Homepage = "https://github.com/hjs-spec/jep-cli"
Repository = "https://github.com/hjs-spec/jep-cli"
Issues = "https://github.com/hjs-spec/jep-cli/issues"

[tool.setuptools.packages.find]
include = ["jep_cli*"]
